20170510-0.1.3(4) 1. 加入安装方案重名判断 2. 修改默认安装方案命名规则 3. 修复安装方案正常情况保存失败的问题 4. 优化安装方案保存逻辑 5. 修复安装方案命名未经检验导致覆盖的 问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="rename">重命名</string>
     <string name="delete">删除</string>
     <string name="rename_location">重命名安装地点</string>
+    <string name="scheme_name_can_not_be_duplicated">安装方案名称不得重复</string>
     <string-array name="project_entry">
         <item name="project_entry_select">启用</item>
         <item name="project_entry_rename">重命名</item>
