--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,14 +50,9 @@
     <string name="delete">删除</string>
     <string name="rename_location">重命名安装地点</string>
     <string name="scheme_name_can_not_be_duplicated">安装方案名称不得重复</string>
-    <string-array name="project_entry">
-        <item name="project_entry_select">启用</item>
-        <item name="project_entry_rename">重命名</item>
-        <item name="project_entry_delete">删除</item>
-    </string-array>
-    <string-array name="setup_positions">
-        <item name="setup_position_a">A相</item>
-        <item name="setup_position_b">B相</item>
-        <item name="setup_position_c">C相</item>
-    </string-array>
+    <string name="no_scheme">当前安装项目没有安装方案</string>
+    <string name="setup_position_a">A相</string>
+    <string name="setup_position_b">B相</string>
+    <string name="setup_position_c">C相</string>
+    <string name="setup_location_and_ble_address">安装位置/BLE地址</string>
 </resources>
